--- a/src/main/Makefile
+++ b/src/main/Makefile
@@ -31,6 +31,7 @@ source_cpp =	../common/files/file_reader.cpp \
                 ../stLFR/ScaffInfo.cpp\
 				../stLFR/LineGroup.cpp\
                 ../stLFR/contigPairInfo.cpp\
+                ../stLFR/ONT2Gap.cpp\
 				../stLFR/ContigOverlap.cpp\
 				../stLFR/CBB.cpp\
 				../stLFR/TagId.cpp\
